--- a/data/en/sections/educations.yaml
+++ b/data/en/sections/educations.yaml
@@ -38,7 +38,7 @@ degrees:
     achieved: 92
     outOf: 100
     
-- name: MSci. in Informatics and Telecommmunications Engineering
+- name: B.Eng. in Informatics and Telecommmunications Engineering
   icon: fa-graduation-cap
   timeframe: 2012-2017
   institution:
