--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -23,12 +23,12 @@ experiences:
     # end: Dec 2020
     # give some points about what was your responsibilities at the company.
     responsibilities:
-    - Leading Researcher on Horizon 2020 programmes ([SPEAR](https://www.spear2020.eu), [SDN-microSENSE](https://www.sdnmicrosense.eu), [TERMINET](https://www.terminet-h2020.eu), ELECTRON, [EVIDENT](https://www.evident-h2020.eu))
-    - Security and privacy on smart grids, SDN technologies on smart grids, cybersecurity, next-generation IoT, multi-access edge computing.
+    - Researcher for European research programmes ([SPEAR H2020](https://www.spear2020.eu), [SDN-microSENSE H2020](https://www.sdnmicrosense.eu), [TERMINET H2020](https://www.terminet-h2020.eu), ELECTRON H2020, [EVIDENT H2020](https://www.evident-h2020.eu), [Jaunty Erasmus+](https://www.jaunty.eu))
+    - Security and privacy on smart grids, SDN technologies on smart grids, cybersecurity, next-generation IoT.
     - Leader of dissemination activities (SPEAR), end-user for IoT and cybersecurity platforms (SPEAR, SDN-microSENSE, TERMINET, EVIDENT, ELECTRON).
     - Design, implementation, and administration of custom virtualized and SDN-enabled infrastructure.
     - ICT infrastructure documentation.
-    - Deployment and configuration of industrial networks (SCADA, PLC, power meters, Modbus TCP/IP)
+    - Deployment and configuration of industrial networks (SCADA, PLC, smart meters)
     - Software Development
 
 - company:
