--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -18,7 +18,7 @@ designation: Freelance Researcher
 resume: "cv.html"
 
 # a summary about you
-summary: 'I am a researcher and developer with 2 years of experience in 5 Horizon 2020 research programes and 1 national-funded program.'
+summary: 'I am a researcher and ICT engineer with 3 years of experience in 5 Horizon 2020 research programes and 1 national-funded program.'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
