--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -21,6 +21,12 @@ buttons:
 
 # your projects
 projects:
+- name: Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON
+  role: Author
+  timeline: "Nov 2017"
+  summary: My diploma thesis which was submitted to fulfill the requirements for receiving the B.Eng. in Informatics and Telecommunications Engineering.
+  url: https://christos.pw/thesis.pdf
+
 - name: SDN Dashboard
   logo: /images/sdndashboard.png
   role: Leading Developer
