--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -26,6 +26,7 @@ projects:
   timeline: "Nov 2017"
   summary: My diploma thesis which was submitted to fulfill the requirements for receiving the B.Eng. in Informatics and Telecommunications Engineering.
   url: https://christos.pw/thesis.pdf
+  tags: ["academic"]
 
 - name: SDN Dashboard
   logo: /images/sdndashboard.png
