--- a/data/en/sections/educations.yaml
+++ b/data/en/sections/educations.yaml
@@ -49,7 +49,7 @@ degrees:
     achieved: 8.2
     outOf: 10
   publications:
-  - title: Thesis titled "Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON"
+  - title: Thesis titled 'Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON'
     url: "https://christos.pw/thesis.pdf"
   extracurricularActivities: #(optional)
   - Teching Fellow for Computer Networks, Computer and Network Security, Network Design, Event-driven simulation.
