--- a/config.yaml
+++ b/config.yaml
@@ -41,3 +41,9 @@ params:
 
   logo:
     favicon: images/favicon.png
+
+  darkMode:
+    enable: true
+    provider: darkreader
+    default: system
+
