--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -13,24 +13,24 @@ section:
 skills:
 - name: Computer Networking and SDN
   icon: "/images/sections/skills/kubernetes.png"
-  summary: "Certified under the CCNA programme (2019). Cisco IOS, ArubaOS-Switch, OpenFlow 1.3, "
+  summary: "Certified under the CCNA programme (2019), Python Scapy, ArubaOS-Switch, OpenFlow 1.3, Ryu."
 
 - name: Python
   icon: "/images/sections/skills/cloud.png"
-  summary: "Using as the main language for professional development (Django, Ryu, Elasticsearch, PyQT)."
+  summary: "My main language for professional development (Django, REST APIs, etc)."
 
 - name: Virtualization
   icon: "/images/sections/skills/cloud.png"
-  summary: "Worked mainly with Proxmox, KVM, XCP-ng, VMware Workstation, Virtualbox."
+  summary: "Proxmox, KVM, XCP-ng, VMware Workstation, Virtualbox."
 
 - name: DevOps
   icon: "/images/sections/skills/cloud.png"
-  summary: "Docker, Dockerfiles, Implementation of GitLab CI/CD pipelines for Docker apps, docker-compose, Elasticsearch."
+  summary: "Docker, Dockerfiles, GitLab CI/CD pipelines for Docker apps, docker-compose, Elasticsearch, MongoDB."
 
 - name: Security
   icon: "/images/sections/skills/cloud.png"
-  summary: "Kali Linux, Implementation of cyberattacks against IIoT, pfSense, TLS, PKI management, OpenVPN"
+  summary: "Kali Linux, ettercap, Python Scapy, pfSense, TLS, PKI management, OpenVPN"
 
 - name: Industrial IoT
   icon: "/images/sections/skills/cloud.png"
-  summary: "Modbus TCP, MQTT, Raspberry Pi 4, I2C sensors, DLMS/COSEM."
+  summary: "Modbus TCP, MQTT, Raspberry Pi 4, I2C, DLMS/COSEM, OCPP 1.6-J."
