--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -39,5 +39,5 @@ socialLinks:
 badges:
 - type: certification
   name: CCNA
-  url: "https://www.credly.com/earner/earned/badge/8beac281-7eff-45c3-a1bf-b3eeb4699ca3"
+  url: "images/ccna_600.png"
   badge: "https://images.credly.com/size/340x340/images/683783d8-eaac-4c37-a14d-11bd8a36321d/ccna_600.png"
