--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -13,24 +13,33 @@ section:
 skills:
 - name: Computer Networking and SDN
   icon: "/images/sections/skills/kubernetes.png"
-  summary: "Certified under the CCNA programme (2019), Python Scapy, ArubaOS-Switch, OpenFlow 1.3, Ryu."
+  summary: "Certified under the CCNA programme (2019), Python Scapy, ArubaOS-Switch, OpenFlow 1.3, Ryu, GNS3."
 
-- name: Python
+- name: Programming
   icon: "/images/sections/skills/cloud.png"
-  summary: "My main language for professional development (Django, REST APIs, etc)."
+  summary: "Python, JavaScript, Django, Java, MATLAB, C/C++"
 
 - name: Virtualization
   icon: "/images/sections/skills/cloud.png"
-  summary: "Proxmox, KVM, XCP-ng, VMware Workstation, Virtualbox."
+  summary: "Proxmox VE, KVM, XCP-ng, VMware Workstation, Virtualbox."
 
 - name: DevOps
   icon: "/images/sections/skills/cloud.png"
-  summary: "Docker, Dockerfiles, GitLab CI/CD pipelines for Docker apps, docker-compose, Elasticsearch, MongoDB."
+  summary: "Docker, Dockerfiles, GitLab CI/CD pipelines for Docker apps, docker-compose."
 
-- name: Security
+- name: Cybersecurity
   icon: "/images/sections/skills/cloud.png"
-  summary: "Kali Linux, ettercap, Python Scapy, pfSense, TLS, PKI management, OpenVPN"
+  summary: "pfSense, PKI, OpenVPN, ettercap, Python Scapy, LDAP, OIDC"
 
 - name: Industrial IoT
   icon: "/images/sections/skills/cloud.png"
   summary: "Modbus TCP, MQTT, Raspberry Pi 4, I2C, DLMS/COSEM, OCPP 1.6-J."
+
+- name: Telecommunications
+  icon: "/images/sections/skills/cloud.png"
+  summary: "ITU-T PONs, OMNeT++."
+
+- name: Miscellaneous
+  icon: "/images/sections/skills/cloud.png"
+  summary: "Troubleshooting, Horizon 2020 Project Management, Office Suite, LATEX"
+
