--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -1,5 +1,5 @@
 # Copyright Notice
-copyright: © 2022 Copyright.
+copyright: Portfolio and personal blog of Christos Dalamagkas
 
 # Meta description for your site.  This will help the search engines to find your site.
 description: Portfolio and personal blog of Christos Dalamagkas.
