--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -18,7 +18,7 @@ designation: Freelance Researcher
 resume: "cv.html"
 
 # a summary about you
-summary: 'I am a researcher and ICT engineer with experience in Horizon 2020 and national-funded research programes'
+summary: 'I am a researcher and ICT engineer with experience in Horizon Europe research programes'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
