--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -7,7 +7,7 @@ greeting: "Hi, I am"
 #image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "me@christos.pw"
+  email: "me@cdalamagkas.gr"
   phone: "+30 6983160295"
 
 # some summary about what you do
