fixed ccna logo

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -48,4 +48,4 @@ badges:
 - type: certification
   name: CCNA
   url: "https://www.credly.com/org/cisco/badge/ccna"
-  badge: "/ccna_600.png"
+  badge: "images/ccna_600.png"
