--- a/data/en/sections/educations.yaml
+++ b/data/en/sections/educations.yaml
@@ -50,7 +50,7 @@ degrees:
     outOf: 10
   publications:
   - title: Thesis titled 'Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON'
-    url: "https://christos.pw/thesis.pdf"
+    url: "https://dspace.uowm.gr/xmlui/bitstream/handle/123456789/835/cdalamagkas_diploma_thesis.pdf"
   extracurricularActivities: #(optional)
   - Teching Fellow for Computer Networks, Computer and Network Security, Network Design, Event-driven simulation.
   - Video editing for the course "Parallel and Distributed Systems" using MeGUI and Sony Vegas Pro.
